# ndi-2023

./: .gitignore  README.md
.github/workflows/: deploy.yml  publish-faas.yml
back/: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json
back/RetrieveFacts/: function.json
back/src/: main.rs
back/src/functions/: GetFact.ts  GetLeaderboard.ts  PostAttempt.ts  RetrieveFacts.ts
cyberstory/: Cyberstory.html
front/: .env.example  .prettierignore  .prettierrc  env.d.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
front/src/: app.postcss
front/src/lib/auth/: authService.ts  store.ts
front/src/lib/components/: fact.svelte  leaderboard.svelte  question.svelte  question_buttons.svelte  termo.js  theme-dropdown.svelte  timer.svelte  user-dropdown-menu.svelte
front/src/lib/types/: fact.type.ts
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/escape-game/: +page.svelte
front/src/routes/game/: +page.svelte
infra/: Pulumi.dev.yaml  Pulumi.yaml  go.mod  go.sum  main.go
