[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
mongodb = { version = "2.7.1", features = ["sync"], default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_json = "1.0.108"
